[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.10.4"
http-serde = "1.1.3"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.25"
similar = { version = "2.2.1", features = ["inline"] }
syntect = "5.1.0"
tokio = { version = "1.32.0", features = ["full"] }
url = { version = "2.4.1", features = ["serde"] }
